--- a/src/index.css
+++ b/src/index.css
@@ -7,12 +7,12 @@
 }
 
 .font-NotoSansJP {
+    
     font-family: "Noto Sans JP", cursive;
 }
 
-#item-1{
-
+.card-shadow{
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    
 }
-#item-2{
 
-}
