--- a/src/index.css
+++ b/src/index.css
@@ -2,17 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
-.font-DancingScript{
+.font-DancingScript {
     font-family: "Dancing Script", cursive;
 }
 
 .font-NotoSansJP {
-    
     font-family: "Noto Sans JP", cursive;
 }
 
-.card-shadow{
+.card-shadow {
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    
 }
 
+.card-gradient-bg {
+    background: #00c9ff; /* fallback for old browsers */
+    background: -webkit-linear-gradient(
+        to left,
+        #92fe9d,
+        #00c9ff
+    ); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(
+        to left,
+        #92fe9d,
+        #00c9ff
+    ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
