--- a/src/index.css
+++ b/src/index.css
@@ -2,28 +2,110 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600;1,700&display=swap");
+
 .font-DancingScript {
     font-family: "Dancing Script", cursive;
 }
+body { padding-top: 4rem; }
 
 .font-NotoSansJP {
-    font-family: "Noto Sans JP", cursive;
+    font-family: "Noto Sans JP", serif;
 }
 
+.font-lora {
+    font-family: "Lora", serif;
+}
 .card-shadow {
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
 .card-gradient-bg {
-    background: #00c9ff; /* fallback for old browsers */
-    background: -webkit-linear-gradient(
-        to left,
-        #92fe9d,
-        #00c9ff
-    ); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(
-        to left,
-        #92fe9d,
-        #00c9ff
-    ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background-color: #f59e0b;
+    /* background: #00c9ff; fallback for old browsers */
+}
+#footer {
+    background-color: #92fe9d;
+}
+
+.cookie-plain-bg {
+    /* The image used */
+    background-image: url("./images/cookie-plain.JPG");
+
+    /* Full height */
+    /* height: 100%; */
+
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.card {
+    position: relative;
+    overflow: hidden;
+}
+.card .item-overlay {
+    position: absolute;
+    top: 100%;
+    left: 0%;
+    overflow: hidden;
+    width: 100%;
+    height: max-content;
+    transition: 0.2s linear;
+    background-color: #ffffff;
+}
+.card:hover .item-overlay {
+    -webkit-transform: translateY(-100%);
+    transform: translateY(-100%);
+    will-change: transform;
+}
+
+.hero-bg {
+    background-image: url("./images/hero-bg-2.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+/* .yellow-bg-thing{
+    background-color: #eba74e;
+} */
+
+/* #order-now-link:hover{
+    background-color: #4cc1e5;
+} */
+.nav {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 100;
+    box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.2);
+}
+.dropdown{
+    position: fixed;
+    width: 100%;
+    top: 4rem;
+    z-index: 100;
+    background-color: white;
+    box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.2);
+}
+#hero {
+    top: 0;
+    position: relative;
+}
+.dark-text {
+    color: #343851;
+}
+
+.footer-bg {
+    background-color: #ff5d17;
+}
+
+.icon {
+    display: inline-flex;
+    white-space: pre;
+}
+
+.baseline svg{
+    top: 0.125em;
+    position: relative;
 }
