--- a/src/index.css
+++ b/src/index.css
@@ -21,11 +21,11 @@ body { padding-top: 4rem; }
 }
 
 .card-gradient-bg {
-    background-color: #f59f0b2f;
+    background-color: #FDEDD2;
     /* background: #00c9ff; fallback for old browsers */
 }
-#footer {
-    background-color: #92fe9d;
+.form-order-bg {
+    background-color: #EBFFED;
 }
 
 .cookie-plain-bg {
@@ -97,9 +97,11 @@ body { padding-top: 4rem; }
 }
 
 .footer-bg {
-    background-color: #ff5d1741;
+    background-color: #FFD5C3;
 }
-
+#root{
+    background-color: #FFD5C3;
+}
 .icon {
     display: inline-flex;
     white-space: pre;
