added button changes

--- a/src/index.css
+++ b/src/index.css
@@ -116,13 +116,19 @@ body {
 .show-cart-button {
     position: fixed;
     width: 24%;
-    bottom: 0.25rem;
+    bottom: 1rem;
     left: 38%;
     z-index: 103;
     color: white;
     background-color: #0a2b41;
+    box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.2);
 }
 .img-resp {
     width: 100%;
 
+}
+
+.blue-button-style{
+    background-color: #0a2b41;
+    color: white
 }
